--- a/Data Analysis/analysis copy_aggregate_devices.ipynb
+++ b/Data Analysis/analysis copy_aggregate_devices.ipynb
@@ -716,6 +716,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clustering Aggregato su Aperture ed Allarmi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
