--- a/Data Analysis/analysis_single_device.ipynb
+++ b/Data Analysis/analysis_single_device.ipynb
@@ -649,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creiamo un DataFrame aggregato giornalmente"
+    "### Creiamo un DataFrame aggregato giornalmente"
    ]
   },
   {
@@ -773,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalizza i dati e usa KMeans per clusterizzare i giorni"
+    "### Normalizza i dati e usa KMeans per clusterizzare i giorni"
    ]
   },
   {
